# cplr

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.debian  OLD.md  README.md  c.c  compile  compile.sh  lib.sh  libl.h  libs.h  testedit  testgen  testman  testrun
doc/: examples.md  introduction.md
include/: cpkg.h  libl.h  libs.h  libx.h
include/cext/: abort.h  attr.h  list.h  memory.h  string.h  value.h
include/cplr/: abort.h  attr.h  list.h  string.h
minilib/: args.m  file_read.m  gtk_app.m  gtk_app_win.m  lines.m
samples/: gtk-application.sh  gtk-button.sh  gtk-errors.sh  gtk-window.sh
source/: cext_abort.c  cext_list.c  cext_memory.c  cext_string.c  cext_value.c  cgc.c  cgc.h  cpkg.c  cplr.c  cplr.h  cplr_command.c  cplr_compile.c  cplr_config.h.in  cplr_defaults.c  cplr_evaluate.c  cplr_execute.c  cplr_generate.c  cplr_interact.c  cplr_main.c  cplr_misc.c  cplr_optparse.c  cplr_package.c  cplr_prepare.c  cplr_private.h  cplr_run.c  cplr_state.c  cplr_symbols.c
tests/: err-syntax.base.cmd  err-syntax.base.out  err-syntax.variant.d.cmd  err-syntax.variant.d.out  err-syntax.variant.dn.cmd  err-syntax.variant.dn.out  err-syntax.variant.dnp.cmd  err-syntax.variant.dnp.out  err-syntax.variant.dnpv.cmd  err-syntax.variant.dnpv.out  err-syntax.variant.dnpvv.cmd  err-syntax.variant.dnpvv.out  err-syntax.variant.dnv.cmd  err-syntax.variant.dnv.out  err-syntax.variant.dnvv.cmd  err-syntax.variant.dnvv.out  err-syntax.variant.dp.cmd  err-syntax.variant.dp.out  err-syntax.variant.dpv.cmd  err-syntax.variant.dpv.out  err-syntax.variant.dpvv.cmd  err-syntax.variant.dpvv.in  err-syntax.variant.dpvv.out  err-syntax.variant.dv.cmd  err-syntax.variant.dv.out  err-syntax.variant.dvv.cmd  err-syntax.variant.dvv.out  err-syntax.variant.n.cmd  err-syntax.variant.n.out  err-syntax.variant.np.cmd  err-syntax.variant.npv.cmd  err-syntax.variant.npvv.cmd  err-syntax.variant.npvv.out  err-syntax.variant.nv.cmd  err-syntax.variant.nv.out  err-syntax.variant.nvv.cmd  err-syntax.variant.nvv.out  err-syntax.variant.p.cmd  err-syntax.variant.p.out  err-syntax.variant.pv.cmd  (+375 more)
